# book-depository-dataset

./: .env.template  .gitignore  Pipfile  README.md  alembic.ini  pyproject.toml  requirements.txt  scrapy.cfg
.github/: FUNDING.yml
.github/workflows/: code-analysis.yml  spider_tests.yml  testing.yml
alembic/: env.py
alembic/versions/: 10df299414ec_create_authors_tables.py  22fdd5933222_create_book_table.py  71b8142d265f_.py  b481d7bccdd3_.py  cf845190defa_create_categories_tables.py  e91b4618076e_create_places_tables.py  fc3e99eb8019_create_formats_tables.py
bdepo/: pipelines.py  settings.py  tests.py
bdepo/spiders/: bdepobooks.py
crawler/: README.md  tests.py
crawler/bdepo/: creds.json  items.py  middlewares.py  pipelines.py  settings.py
crawler/bdepo/spiders/: bdepobooks.py
data/parsed/: .gitignore
data/raw/textual/: .gitignore
db/: models.py
eda/: 1MBooks_Dataset_EDA.ipynb
great_expectations/: great_expectations.yml
great_expectations/checkpoints/bdepo/: dataset.yml
great_expectations/expectations/: .ge_store_backend_id
great_expectations/expectations/bdepo/: dataset.json
notebooks/: 1MBooks_Dataset_EDA.ipynb
parser/: README.md  cleaner.py  parse_dataset.py  utils.py
src/alembic/: env.py
src/alembic/versions/: 71b8142d265f_.py  b481d7bccdd3_.py
src/bdepo/: items.py  middlewares.py  pipelines.py  settings.py
src/bdepo/spiders/: bdepobooks.py
src/db/: config.py  models.py
src/parser/: __init__.py  cleaner.py  metadata.py  parse.py  parse_dataset.py  schema.py  utils.py
tests/: test_spider.py
