[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | alembic/versions
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[tool.poetry]
name = "book-depository-dataset"
version = "0.1.0"
description = "A large collection of books, scraped from bookdepository.com"
authors = ["sp1thas <sp1thas@autistici.org>"]

[tool.poetry.dependencies]
python = "^3.8"
dateparser = "^1.0.0"
jsonlines = "^2.0.0"
pandas = "^1.3.1"
python-slugify = "^5.0.2"
jupyter = "^1.0.0"
tqdm = "^4.62.0"
langcodes = "^3.1.0"
Scrapy = "^1.8.1"
alembic = "^1.6.5"
psycopg2 = "^2.9.1"
typing-extensions = "^3.10.0"
sqlalchemy = "^1.4.22"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
requests = "^2.26.0"
black = "^21.7b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
