[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | alembic/versions
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[tool.poetry]
name = "book-depository-dataset"
version = "0.1.0"
description = "A large collection of books, scraped from bookdepository.com"
authors = ["sp1thas <sp1thas@autistici.org>"]

[tool.poetry.dependencies]
python = "^3.9"
dateparser = "^1.0.0"
jsonlines = "^2.0.0"
pandas = "^1.3.1"
python-slugify = "^5.0.2"
tqdm = "^4.62.0"
langcodes = {extras = ["data"], version = "^3.3.0"}
typing-extensions = "^3.10.0"
Pillow = "^9.0.1"
great-expectations = "^0.15.34"
scrapy3 = ">=1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
requests = "^2.26.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ['db/', 'parser/']